<resources>
    <string name="app_name">Pantalla de carga</string>
    <string name="IniciarSesion">Iniciar sesión</string>
    <string name="NombreUsuario">Nombre de usuario</string>
    <string name="Cuenta">¿No tienes una cuenta?</string>
    <string name="Registrate">Regístrate</string>
    <string name="Cotraseña">Contraseña</string>
    <string name="RepCotraseña">Repetir contraseña</string>
    <string name="Registro">Registro</string>
    <string name="Logo">Logrolling</string>
    <string name="Correo">Correo electrónico</string>
    <string name="TerminosCondiciones">Acepto los Términos y condiciones y la política de privacidad</string>
    <string name="CuentaYa">¿Ya tienes una cuenta?</string>
    <string name="RegistroExito">Hemos enviado un mensaje de confirmación a tu correo electrónico.\n \n Sigue las instrucciones para unirte a nosotros.</string>
    <string name="Exito">¡Éxito!</string>
    <string name="Favores">Favores</string>
    <string name="MisFavores">Mis Favores</string>
    <string name="Perfil">Mi Perfil</string>
    <string name="Regalos">Regalos</string>
    <string name="Configuracion">Configuración</string>
    <string name="Mensajes">Mensajes</string>
    <string name="GuardarCambios">Guardar Cambios</string>
    <string name="Nombre">Nombre</string>
    <string name="Descripcion">Descripción del favor</string>
    <string name="LugarRealiz">Lugar de realización</string>
    <string name="LugarEntrega">Lugar de entrega</string>
    <string name="FechaLimite">Fecha límite</string>
    <string name="Recompensa">Recompensa ofrecida</string>
    <string name="PedirFavor">Pedir nuevo favor</string>
    <string name="TextoPerfil">Cambia tu foto, nombre o contraseña</string>
    <string name="TextoNotificaciones">Cambia la luz, la configuración de notificaciones...</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="TextoAyuda">Aprende todo lo que debes saber sobre Logrolling</string>
    <string name="Ayuda">Ayuda</string>
    <string name="TextoAmigo">¡Gana grollies invitando a tus amigos!</string>
    <string name="Amigo">Invita a un amigo</string>
    <string name="Idioma">Idioma</string>
    <string name="TextoIdioma">¿Te consideras poliglota? Escoge tu idioma</string>
    <string name="CerrarSesion">Cerrar sesión</string>
    <string name="TextoCerrarSesion">No te lo recomendamos, pero si lo deseas...</string>




</resources>
