<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2699FB"
    tools:context=".Registro">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="101dp"
        android:layout_height="28dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/rubik"
        android:linksClickable="true"
        android:onClick="iniciarSesion"
        android:text="@string/IniciarSesion"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="283dp"
        android:layout_height="42dp"
        android:layout_marginTop="36dp"
        android:background="#FFFFFF"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="@font/rubik"
        android:onClick="iniciarSesion"
        android:text="@string/Registrate"
        android:textColor="#0080E6"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/Contrasenna"
        android:layout_width="358dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="@string/Cotraseña"
        android:inputType="textPassword"
        android:textColor="#F2F2F2"
        android:textColorHint="#F2F2F2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Correo" />

    <EditText
        android:id="@+id/RepContrasenna"
        android:layout_width="358dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:ems="10"
        android:hint="@string/RepCotraseña"
        android:inputType="textPassword"
        android:textColor="#F2F2F2"
        android:textColorHint="#F2F2F2"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contrasenna" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/rubik"
        android:text="@string/Registro"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NombreUsuario"
        android:layout_width="357dp"
        android:layout_height="54dp"
        android:layout_marginTop="56dp"
        android:drawableStart="@android:drawable/ic_menu_myplaces"
        android:ems="10"
        android:fontFamily="@font/rubik"
        android:hint="@string/NombreUsuario"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/Correo"
        android:layout_width="357dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:drawableStart="@android:drawable/sym_action_email"
        android:ems="10"
        android:fontFamily="@font/rubik"
        android:hint="@string/Correo"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NombreUsuario" />

    <Switch
        android:id="@+id/Condiciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RepContrasenna" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="242dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/rubik"
        android:onClick="mostrarPolíticaPrivacidad"
        android:text="@string/TerminosCondiciones"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Condiciones"
        app:layout_constraintTop_toBottomOf="@+id/RepContrasenna" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="162dp"
        android:layout_height="24dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/rubik"
        android:text="@string/CuentaYa"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>